# FormelSamling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: application.cpp  application.h  main.cpp  masterGui.cpp  masterGui.h  styling.h  vectors.cpp  vectors.h  visualizer.h
